<resources>
    <string name="app_name">MisPelis</string>
    <string name="title_list">Peliculas</string>
    <string name="title_favorites">Favoritos</string>
    <string name="movie_title">movie_title</string>
    <string name="average">Puntaje: 10.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview">Reseña</string>
    <string name="budget">Presupuesto</string>
    <string name="title_details">Detalles</string>
</resources>