<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.mispelis.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_navigation_list_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.mispelis.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_navigation_favorites_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/splahFragment"
        android:name="com.example.mispelis.ui.splash.SplahFragment"
        android:label="fragment_splah"
        tools:layout="@layout/fragment_splah" >
        <action
            android:id="@+id/action_splahFragment_to_navigation_list"
            app:destination="@id/navigation_list" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.mispelis.ui.detail.DetailFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="Movie"
            app:argType="com.example.mispelis.model.remote.Movie" />
    </fragment>
</navigation>